<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20dp"
    android:background="@color/gray"
    android:gravity="center"
    tools:context=".fragment.RecoverAccountFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:text="Molimo Vas ispunite podatke za prijavu te kliknite na prijavu."
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:hint="@string/e_adresa"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:autofillHints=""
        android:hint="@string/lozinka"
        android:inputType="text|textPassword"
        android:padding="@dimen/_10dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:padding="@dimen/_10dp"
        android:text="@string/prijava"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="7sp"
        app:iconSize="@dimen/_162dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/returnButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:padding="@dimen/_10dp"
        android:text="Natrag"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="7sp"
        app:iconSize="@dimen/_162dp" />


</LinearLayout>
